--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d builld"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +48,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "hhttps://ThorgyOrb.github.io/Portafolio"
+  "homepage": "https://ThorgyOrb.github.io/Portafolio"
 }
